--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -147,6 +147,7 @@ nav ul li .item:hover {
   border-radius: 30px;
 }
 
+
 @media (min-width: 992px) {
 
   .containerTitleIcon{
@@ -166,7 +167,7 @@ nav ul li .item:hover {
     flex-direction: row;
     align-items: center;
     width: 17%;
-    margin-left: 2%;
+    margin-left: 0%;
   }
   
   .imgPerfil {
@@ -177,5 +178,13 @@ nav ul li .item:hover {
   .iconVerified {
     width: 24px;
     margin-left: 10%;
+  }
+
+  .headerContent nav{
+    margin-left: 14%;
+  }
+
+  .containerIcons{
+    margin-left: 0%;
   }
 }
