--- a/src/components/header/menuHamburger/HamburgerMenu.module.css
+++ b/src/components/header/menuHamburger/HamburgerMenu.module.css
@@ -24,28 +24,23 @@
     transition: 0.3s;
   }
   
-  /* Transición cuando el menú está abierto */
-  .hamburgerButton .open {
-    background: var(--text-color);
-  }
-  
-  /* Estilos del menú desplegable */
 
-  nav{    transition: transform 0.6s ease, opacity 0.6s ease; /* Smoother transition */}
+  
 
   .menu {
     display: block;
-    position: absolute;
-    right: -2rem;
-    top: -6.5vw;
-    height: 50rem;
-    width: 25rem;
+    position: fixed;
+    right: 0;
+    top: 0;
+    padding-top: 7%;
+    height: 60rem;
+    width: 100%;
     color: var(--text-color);
     border: none;
     box-shadow: -1px -1px 14px 4px rgba(0, 0, 0, 0.2);
-    transition: transform 0.6s ease, opacity 0.6s ease; /* Smoother transition */
-    transform: translateX(100); /* Added unit */
-    opacity: 0; /* Initially hidden */
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transform: translateX(100px);
+    opacity: 0;
     background-color: var(--secondary-color);
     z-index: 1;
 }
@@ -53,22 +48,20 @@
 
 /* Display the menu when it's open */
 .menu.open {
-    transform: translateX(0);
+    transform: translateX(0px);
     opacity: 1;
-    padding-top: 127%;
 }
 
 .icon{
-  width: 26px;
+  width: 24px;
 }
 
   .iconClose{
     display: flex;
     justify-content: end;
-    margin-right: 2rem;
+    margin-right: 6%;
     margin-bottom: 3%;
-  }
-
+}
   
   /* Estilos de la lista de elementos del menú */
   .menuList {
@@ -78,6 +71,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 8%;
   }
   
   .menuList li {
@@ -186,6 +180,15 @@
     flex-direction: row;
     margin-left: 9%;
   }
+
+  
+.iconClose .textH1{
+  font-size: 311%;
+  font-weight: bold;
+  position: absolute;
+  left: -2%;
+  top: 0%;
+}
   
   /* Consultas de medios para dispositivos móviles */
   @media (min-width: 768px) {
